--- a/client/app/views/matricula/revision-last.html
+++ b/client/app/views/matricula/revision-last.html
@@ -309,12 +309,11 @@
 
         <p ng-if="!print">
           Para finalizar su matrícula deberá realizar el abono respectivo dentro de las siguientes
-          <strong>48:00 horas</strong> a traves de cualquier canal de atención del BBVA Banco Continental indicando el concepto
-          <strong>PAGO DE RECAUDACIÓN</strong> a nombre de
-          <strong>Universidad Nacional de Ucayali</strong> por importe/concepto de:
+          <strong>48:00 horas</strong> a traves de cualquier canal de atención del BBVA Banco Continental indicando que van a realizar un pago al código <strong>556</strong>
+          o tambien indicando que el pago es para la <strong>Universidad Nacional de Ucayali</strong>.
         </p>
 
-      
+
       </md-content>
 
       <div layout-align="center start" layout="row" layout-fill>
