--- a/client/app/views/aprobacion/cursos/list-grupo.html
+++ b/client/app/views/aprobacion/cursos/list-grupo.html
@@ -95,7 +95,7 @@
               </td>
               <td colspan="8">
                 <md-button style="width:100%;text-align:left;margin:0;" ng-click="Edit($event,grupo)">
-                 <md-icon md-font-icon="fa fa-cubes"></md-icon> {{grupo._seccion.nombre}}
+                 <md-icon md-font-icon="fa fa-cubes"></md-icon> {{grupo._seccion.nombre}} (Cupos: {{grupo.totalCupos}}, Matriculados:{{grupo.matriculados}})
                </md-button>
 
               </td>
