--- a/client/app/views/matricula/revision-last.html
+++ b/client/app/views/matricula/revision-last.html
@@ -1,5 +1,5 @@
 <div id="printSection" style="width:100%;">
-  <div id="showprint">
+  <div id="showprint" ng-if="!print">
     <div id="headerPre" layout="row" layout-margin layout-fill style="border-bottom: 2px solid black; padding-bottom: 5px;">
       <div id="righthead" style="width:85%;">
         <md-list class="md-layout-column layout-padding md-teal-theme" role="list" style="padding-left:0px; font-size:10px;">
