Corrección error impresión

--- a/client/app/views/matricula/revision-last.html
+++ b/client/app/views/matricula/revision-last.html
@@ -26,7 +26,7 @@
 
     <div layout="row" layout-margin layout-fill style="border-bottom: 2px solid black; padding: 5px 0 5px;">
       <span>ALUMNO: {{ALUMNO.codigo}} {{ ALUMNO._persona.apellidoPaterno }} {{ ALUMNO._persona.apellidoMaterno }}, {{ ALUMNO._persona.nombres }}</span>
-      <div style="margin:auto; margin-right: 0px;">Plan Estudio: {{planestudio}}</div>
+      <!--div style="margin:auto; margin-right: 0px;">Plan Estudio: {{ALUMNO.planestudio}}</div-->
     </div>
 
     <md-content flex class="md-padding page-content" style="border-bottom: 2px solid black;">
