Se agrego Obtener código de alumno

--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -15,7 +15,7 @@
         <p>
             <!--md-button ng-href="/#/getCode">Obtener código universitario</md-button>
             <md-button ng-href="/#/recoverPass">Recuperar contraseña</md-button-->
-            <a href>Obtener código universitario</a><br/>
+            <a ui-sref="getcode">Obtener código universitario</a><br/>
             <a href>Recuperar contraseña</a>
         </p>
         <br>
