--- a/client/app/views/getcode.html
+++ b/client/app/views/getcode.html
@@ -4,21 +4,28 @@
       <span class="fs-headline display-block">{{app.name}}</span>
       <span class="fs-caption display-block">{{app.corporation}}</span>
 
-      <form ng-submit="Login()" class="text-left fs-body-1">
+      <form ng-submit="ObtenerCodigo()" class="text-left fs-body-1">
         <lx-text-field label="Ingrese su documento de identidad">
-          <input type="text" ng-model="user.email">
+          <input type="text" ng-model="model.documento">
         </lx-text-field>
 
         <br>
-        <p>
-            <a href="/#/">Iniciar Sesión</a>
+        <p style="color:red;">
+          {{codigoAlumno}}
         </p>
+
         <br>
-        <md-button class="md-raised md-warn tc-white" aria-label="Obtener Código" style="float:right;">
+        <md-button type="submit" class="md-raised md-warn tc-white" aria-label="Obtener Código" style="float:right;">
           <md-icon md-font-icon="fa fa-credit-card fa-lg tc-white"></md-icon>
           Obtener Código
         </md-button>
+
       </form>
+
+      <div >
+        <a ui-sref="login">Volver</a>
+
+      </div>
 
     </div>
   </div>
