--- a/client/app/views/compromisopagos/list.html
+++ b/client/app/views/compromisopagos/list.html
@@ -18,6 +18,8 @@
             <td class="text-left" data-title="'Nombres'" sortable="nombre" filter="{'nombre':'text'}">{{item._persona.nombres}}</td>
             <td class="text-left" data-title="'Apellidos'" sortable="nombre" filter="{'nombre':'text'}">{{item._persona.apellidoPaterno}} {{item._persona.apellidoMaterno}}</td>
             <td class="text-left" data-title="'Importe'" sortable="resolucion" filter="{'resolucion':'text'}">{{item.importe | currency:"S/."}}</td>
+            <td class="text-left" data-title="'Saldo'" sortable="saldo" filter="{'resolucion':'text'}">{{item.saldo | currency:"S/."}}</td>
+            <td class="text-left" data-title="'Saldo a Favor'" sortable="saldofavor" filter="{'resolucion':'text'}">{{item.saldoFavor | currency:"S/."}}</td>
             <td class="text-left" data-title="'Pagado'">
               <span href title="Pagado" ng-if="item.pagado" class="fa fa-lg fa-toggle-on tc-{{$root.color.primary}}-500"></span>
               <span href title="No Pagado" ng-if="!item.pagado" class="fa fa-lg fa-toggle-off tc-{{$root.color.primary}}-500"></span>
@@ -41,3 +43,22 @@
 
 
 <!--acciones: se mostraran al seleccionar un elemento del listado-->
+
+<!--acciones: se mostraran al seleccionar un elemento del listado-->
+<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling md-fab-bottom-right">
+ <md-fab-trigger>
+   <md-button aria-label="menu" class="md-fab">
+     <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
+   </md-button>
+ </md-fab-trigger>
+
+ <md-fab-actions>
+   <!--custom actions: Se agregan en el controlador solo cuando es necesario considerar mas opciones para cada elemento de la lista-->
+   <md-button ng-repeat="action in UI.customActions" aria-label="{{action.label}}" class="md-fab md-raised md-mini" ng-click="action.onclick($event)">
+     <md-tooltip md-direction="left">{{action.label}}</md-tooltip>
+     <md-icon class="md-accent" md-font-icon="fa {{action.icon}} fa-lg  tc-{{$root.color.accent}}-500" aria-label="{{action.label}}"></md-icon>
+   </md-button>
+   <!--end custom actions-->
+
+ </md-fab-actions>
+</md-fab-speed-dial>
