Se implemento cobranza como admin y correccion de retorno de codigo universitario

--- a/client/app/views/home/home_alumno.html
+++ b/client/app/views/home/home_alumno.html
@@ -18,7 +18,7 @@
           </span>
         </a>
       </div>
-      <div class="dashboard display-animation" flex="67" flex-sm="100" style="opacity:0.4;" ng-if="!showmenu">
+      <div class="dashboard display-animation" flex="67" flex-sm="100" style="opacity:0.4;" ng-if="!showmenu||!aproved">
         <a href class="tile tile-lg bgc-white ripple-effect" ui-sref="app">
           <span class="content-wrapper">
               <span class="tile-content">
