Agregar Grupo a Fichas y otros

--- a/client/app/views/compromisopagos/list.html
+++ b/client/app/views/compromisopagos/list.html
@@ -16,7 +16,7 @@
             </td>
             <td class="text-left" data-title="'Código'" sortable="codigo" filter="{'codigo':'text'}">{{item.codigo}}</td>
             <td class="text-left" data-title="'Nombres'" sortable="nombre" filter="{'nombre':'text'}">{{item._persona.nombres}}</td>
-            <td class="text-left" data-title="'Apellidos'" sortable="nombre" filter="{'nombre':'text'}">{{item._persona.apellidoPaterno}} {{item._persona.apellidoMaterno}}</td>
+            <td class="text-left" data-title="'Apellidos'" sortable="apellidos" filter="{'apellidos':'text'}">{{item._persona.apellidoPaterno}} {{item._persona.apellidoMaterno}}</td>
             <td class="text-left" data-title="'Importe'" sortable="resolucion" filter="{'resolucion':'text'}">{{item.importe | currency:"S/."}}</td>
             <td class="text-left" data-title="'Saldo'" sortable="saldo" filter="{'resolucion':'text'}">{{item.saldo | currency:"S/."}}</td>
             <td class="text-left" data-title="'Saldo a Favor'" sortable="saldofavor" filter="{'resolucion':'text'}">{{item.saldoFavor | currency:"S/."}}</td>
