--- a/client/app/views/matricula/revision-last.html
+++ b/client/app/views/matricula/revision-last.html
@@ -46,6 +46,9 @@
               <strong>CICLO</strong>
             </td>
             <td>
+              <strong>GRUPO</strong>
+            </td>
+            <td>
               <strong>CR.</strong>
             </td>
             <td>
@@ -57,6 +60,7 @@
             <td class="text-left" data-title="'CODIGO'">{{item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.codigo }}</td>
             <td class="text-left" data-title="'NOMBRE CURSO'">{{ item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle._curso.nombre }}</td>
             <td class="text-left" data-title="'CICLO'">{{item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.ciclo}}</td>
+            <td class="text-left" data-title="'CICLO'">{{item._grupoCurso._seccion.nombre}}</td>
             <td class="text-left" data-title="'CR.'">{{item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.creditos}}</td>
             <td class="text-left" data-title="'ESTADO'">Matriculado</td>
           </tr>
@@ -246,6 +250,9 @@
                 <strong>CICLO</strong>
               </td>
               <td>
+                <strong>GRUPO</strong>
+              </td>
+              <td>
                 <strong>CR.</strong>
               </td>
               <td>
@@ -258,6 +265,7 @@
               <td class="text-left" data-title="'CODIGO'">{{item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.codigo }}</td>
               <td class="text-left" data-title="'NOMBRE CURSO'">{{ item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle._curso.nombre }}</td>
               <td class="text-left" data-title="'CICLO'">{{item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.ciclo}}</td>
+              <td class="text-left" data-title="'CICLO'">{{item._grupoCurso._seccion.nombre}}</td>
               <td class="text-left" data-title="'CR.'">{{item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.creditos}}</td>
               <td class="text-left" data-title="'TIPO CURSO'"></td>
 
