--- a/client/app/views/blocks/app_header.html
+++ b/client/app/views/blocks/app_header.html
@@ -1,4 +1,4 @@
-<div class="md-toolbar-tools">
+<div class="md-toolbar-tools hidden-print">
   <md-button class="md-icon-button" aria-label="Settings" ng-click="SidenavToggle()">
     <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
   </md-button>
