--- a/client/app/views/home/home_alumno.html
+++ b/client/app/views/home/home_alumno.html
@@ -5,7 +5,7 @@
   </md-subheader>
   <md-content flex style="max-width:1020px;margin:auto;">
     <div layout="row" layout-sm="column">
-      <div class="dashboard display-animation" flex="67" flex-sm="100" ng-if="aproved && showmenu" ng-click="LoadPage2()">
+      <div class="dashboard display-animation" flex="67" flex-sm="100"  ng-click="LoadPage2()">
         <a class="tile tile-lg bgc-white ripple-effect">
           <span class="content-wrapper">
               <span class="tile-content">
